<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/libraryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_format_list_24"
        android:title="@string/title_suggestion_fragment"/>

    <item
        android:id="@+id/upcomingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_coming_soon_24"
        android:title="@string/title_upcoming_fragment"/>

    <item
        android:id="@+id/suggestionFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_suggestion_fragment"/>

    <item
        android:id="@+id/menuFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings_fragment"/>

</menu>