<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.project.frontMobile.viewmodel.UserViewModel" />
        <variable
            name="fragment"
            type="com.project.frontMobile.ui.user.CreateProfileFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        tools:context=".ui.user.CreateProfileFragment">

        <TextView
            android:id="@+id/catch_phrase"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title_create_profile"
            android:textStyle="italic"
            android:textSize="21sp"
            android:textAlignment="center"
            android:textColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_picture_container"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="60dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="4dp"
            app:layout_constraintTop_toBottomOf="@+id/catch_phrase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profile_picture_placeholder"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_baseline_photo_camera_24"
                    android:scaleType="centerCrop"
                    android:visibility="@{viewModel.currentUser.base64.empty ? View.VISIBLE : View.GONE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@{viewModel.currentUser.formatPicture()}"
                    android:scaleType="centerCrop"
                    android:visibility="@{viewModel.currentUser.base64.empty ? View.GONE : View.VISIBLE}"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/pseudo_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pseudo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_pseudo"
                android:text="@{viewModel.currentUser.pseudo}"
                android:onTextChanged="@{(text, start, before, count) -> fragment.onPseudoChanged(text)}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/firstname_container"
            app:layout_constraintTop_toBottomOf="@+id/pseudo_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/hint_name"
                android:text="@{viewModel.currentUser.name}"
                android:onTextChanged="@{(text, start, before, count) -> fragment.onNameChanged(text)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/firstname_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:layout_constraintStart_toEndOf="@id/name_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pseudo_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/hint_firstname"
                android:text="@{viewModel.currentUser.firstName}"
                android:onTextChanged="@{(text, start, before, count) -> fragment.onFirstnameChanged(text)}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/birthday_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/gray"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/name_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/birthday_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_calendar_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="@id/birthday_icon"
                    app:layout_constraintBottom_toBottomOf="@id/birthday_icon"
                    app:layout_constraintStart_toEndOf="@id/birthday_icon"
                    tools:text="12 septembre 2008" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/birthday_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:background="@color/white"
            android:text="@string/header_birthday"
            android:textSize="13sp"
            app:layout_constraintTop_toTopOf="@id/birthday_container"
            app:layout_constraintBottom_toTopOf="@id/birthday_container"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/next_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:textAllCaps="false"
            android:onClick="@{view -> fragment.onClick(view)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>